--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {erl_opts, [{parse_transform, lager_transform}, debug_info, warnings_as_errors]}.
 {deps,
  [
-  {lager, "~>3.2.4"},
-  {jsx, "~>1.4.5"},
-  {jsxd, "~>0.2.3"}
+  {lager, "2.2.3"},
+  {jsx, "2.8.2"},
+  {jsxd, "0.1.9"}
  ]}.
